fixed image link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div style="color: #777;background-color:white;text-align:center;padding:60px 180px;text-align: justify;">
     <div>
-      <img src="assets/img/AAG09457.JPG" id="profile"
+      <img src="assets/img/AAG09457.jpg" id="profile"
         style="max-height: 200px;float:left; margin-right: 20px; border-radius: 50px;" alt="Alan" />
     </div>
     <h3 style="margin:10px;">Hello, I'm Alan</h3>
