--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 
-  <div style="color: #777;background-color:white;text-align:center;padding:60px 180px;text-align: justify;">
+  <div class="bio">
     <div>
       <img src="assets/img/AAG09457.jpg" id="profile"
         style="max-height: 200px;float:left; margin-right: 20px; border-radius: 50px;" alt="Alan" />
@@ -65,10 +65,10 @@
   </div>
 
   <div style="position:relative;">
-    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+    <div class="infoBar">
       <div class="row">
         <!-- Card 1 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/weatherDashboard/" target="_blank">
             <img src="assets/img/weatherdash.gif" class="card-img portIm" alt="..." />
           </a>
@@ -81,7 +81,7 @@
         <!-- Card 1 -->
 
         <!-- Card 2 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/theHikersGuide/" target="_blank">
             <img src="assets/img/hikingApp.gif" class="card-img portIm" alt="..." />
           </a>
@@ -94,7 +94,7 @@
         <!-- Card 2 -->
 
         <!-- Card 3 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/dailyPlanner/" target="_blank">
             <img src="assets/img/dailyPlanner.gif" class="card-img portIm" alt="..." />
           </a>
@@ -107,7 +107,7 @@
         <!-- Card 3 -->
 
         <!-- Card 4 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://salty-brushlands-73681.herokuapp.com/" target="_blank">
             <img src="assets/img/burger.gif" class="card-img portIm" alt="..." />
           </a>
@@ -120,7 +120,7 @@
         <!-- Card 4 -->
 
         <!-- Card 5 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://file-fish.herokuapp.com/" target="_blank">
             <img src="assets/img/fish.gif" class="card-img portIm" alt="..." />
           </a>
@@ -132,7 +132,7 @@
         <!-- Card 5 -->
 
         <!-- Card 6 -->
-        <div class="card mb-3 col-md-4">
+        <div class="card mb-3 col-md-4 shadow">
           <a href="https://www.flickr.com/photos/atventure/albums/72157712916793443" target="_blank">
             <img src="assets/img/photography.PNG" class="card-img portIm" alt="..." />
           </a>
@@ -160,7 +160,7 @@
   </div>
 
   <div style="position:relative;">
-    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+    <div  class="infoBar">
       <!-- Skills Cards -->
       <div class="col-md-12 d-flex justify-content-center">
         <h1 class="pb-3 mr-5">Skill Sets</h1>
@@ -286,7 +286,7 @@
   </div>
 
   <div style="display:block;text-align:center;">
-    <div style="color:#ddd;background-color:#282E34;padding:25px 40px;">
+    <div class="footer" style="color:#ddd;background-color:#282E34;padding:25px 40px;">
       <a href="https://github.com/aagrosse" target="_blank"><i class="fab fa-github fa-2x p-2 text-success"></i></a>
       <a href="https://www.linkedin.com/in/alan-grosse-89101312" target="_blank"><i
           class="fab fa-linkedin-in fa-2x p-2 text-success"></i></a>
@@ -297,12 +297,9 @@
 </body>
 
 </html>
+
 <script>
-  $(document).ready(function () {
-    if (!$.browser.webkit) {
-      $('.wrapper').html('<p>Sorry! Non webkit users. :(</p>');
-    }
-  });
+
 
 
   console.log("Thanks for checking out my portfolio.  Feel free to send me an email at aagrosse@gmail.com")
