--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Card 5 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://file-fish.herokuapp.com/" target="_blank">
-            <img src="assets/img/fish.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/filefish.gif" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Filefish</a><a href="https://github.com/aagrosse/fileFish"
