--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
   <div class="bgimg-2">
     <div class="caption">
-      <span style="background-color:transparent;font-size:25px;color: white;">"The only true wisdom is
-        in knowing you know nothing"</span>
+      <span style="background-color:transparent;font-size:25px;color: white;">"Of all the paths you take in life, make sure a few of them are dirt."</span>
     </div>
   </div>
 
