--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/slate/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -42,7 +42,7 @@
   <div class="bio">
     <div>
       <img src="assets/img/AAG09457.jpg" id="profile"
-        style="max-height: 200px;float:left; margin-right: 20px; border-radius: 50px;" alt="Alan" />
+        alt="Alan" />
     </div>
     <h3 style="margin:10px;">Hello, I'm Alan</h3>
     <p>I'm a Full Stack Web Developer with background in graphic design and leveraging a degree in
@@ -255,8 +255,7 @@
     <div class="caption2 ">
 
       <div class="d-flex justify-content-center">
-        <div class="projects col-md-12 d-flex justify-content-center shadow"
-          style="background-color: rgba(255, 255, 255, 0.65); border-radius: 10px; padding: 40px; max-width: 50%; border: 1px rgba(29, 29, 29, 0.185) solid">
+        <div class="projects col-md-12 d-flex justify-content-center shadow">
           <div class="col-10">
             <div class="form-box mx-auto" style="z-index: 13333;">
               <h4><strong>Get in Touch</strong></h4>
