--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
   <div class="bio">
     <div>
-      <img src="assets/img/AAG09457.jpg" id="profile"
-        alt="Alan" />
+      <img src="assets/img/AAG09457.jpg" id="profile" alt="Alan" />
     </div>
     <h3 style="margin:10px;">Hello, I'm Alan</h3>
     <p>I'm a Full Stack Web Developer with background in graphic design and leveraging a degree in
@@ -59,7 +58,8 @@
 
   <div class="bgimg-2">
     <div class="caption">
-      <span style="background-color:transparent;font-size:25px;color: white;">"Of all the paths you take in life, make sure a few of them are dirt."</span>
+      <span style="background-color:transparent;font-size:25px;color: white;">"Of all the paths you take in life, make
+        sure a few of them are dirt."</span>
     </div>
   </div>
 
@@ -159,7 +159,7 @@
   </div>
 
   <div style="position:relative;">
-    <div  class="infoBar">
+    <div class="infoBar">
       <!-- Skills Cards -->
       <div class="col-md-12 d-flex justify-content-center">
         <h1 class="pb-3 mr-5">Skill Sets</h1>
