--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- Card 1 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/weatherDashboard/" target="_blank">
-            <img src="assets/img/weatherdash.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/weatherDashboard.png" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Weather
@@ -82,7 +82,7 @@
         <!-- Card 2 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/theHikersGuide/" target="_blank">
-            <img src="assets/img/hikingApp.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/hikersGuide.JPG" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">The Hikers Guide</a><a
@@ -95,7 +95,7 @@
         <!-- Card 3 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/dailyPlanner/" target="_blank">
-            <img src="assets/img/dailyPlanner.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/weatherDashboard.png" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Daily Planner</a><a
@@ -108,7 +108,7 @@
         <!-- Card 4 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://salty-brushlands-73681.herokuapp.com/" target="_blank">
-            <img src="assets/img/burger.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/App2.PNG" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Eat-da-burger</a><a
@@ -121,7 +121,7 @@
         <!-- Card 5 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://file-fish.herokuapp.com/" target="_blank">
-            <img src="assets/img/filefish.gif" class="card-img portIm" alt="..." />
+            <img src="assets/img/filefish.PNG" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Filefish</a><a href="https://github.com/aagrosse/fileFish"
