--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Card 3 -->
         <div class="card mb-3 col-md-4 shadow">
           <a href="https://aagrosse.github.io/dailyPlanner/" target="_blank">
-            <img src="assets/img/weatherDashboard.png" class="card-img portIm" alt="..." />
+            <img src="assets/img/workDay.PNG" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
             <h5 class="card-title" style="text-align:center">Daily Planner</a><a
