--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="bgimg-1">
     <div class="caption1">
-      <a href="https://www.linkedin.com/in/alan-grosse-89101312" target="_blank">
+      <a href="https://www.linkedin.com/in/alan-grosse" target="_blank">
         <span>
           <svg viewbox="0 0 100 20">
             <defs>
