--- a/index.html
+++ b/index.html
@@ -300,7 +300,22 @@
 
 
 
-  console.log("Thanks for checking out my portfolio.  Feel free to send me an email at aagrosse@gmail.com")
+  
 
+  function fizzbuzz(input) {
+    for (let i = 0; i < input; i++) {
+        if (i % 3 === 0 && i % 5 === 0) {
+            console.log("Fizzbuzz");
+        } else if (i % 3 === 0) {
+            console.log("Fizz");
+        } else if (i % 5 === 0) {
+            console.log("Buzz");
+        } else {
+            console.log(i);
+        }
+    }
+}
+fizzbuzz(100);
+console.log("Thanks for checking out my portfolio.  Feel free to send me an email at aagrosse@gmail.com")
 
 </script>
