--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
   <div style="display:block;text-align:center;">
     <div class="footer" style="color:#ddd;background-color:#282E34;padding:25px 40px;">
       <a href="https://github.com/aagrosse" target="_blank"><i class="fab fa-github fa-2x p-2 text-success"></i></a>
-      <a href="https://www.linkedin.com/in/alan-grosse-89101312" target="_blank"><i
+      <a href="https://www.linkedin.com/in/alan-grosse" target="_blank"><i
           class="fab fa-linkedin-in fa-2x p-2 text-success"></i></a>
 
     </div>
