--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       use
       my skills in CSS, Javascript, and responsive web design earned through a certificate in Full Stack Development
       from the
-      Georgia Institute of Technology. Known for being organized, collaberative, and a problem solver. Self taught in
+      Georgia Institute of Technology. Known for being organized, collaborative, and a problem solver. Self taught in
       ladder logic and msSQL at
       the Georgia Aquarium and maintained and reprogramed equipment controls and PLC's. Eager to use my skills and
       unique perspective to
