--- a/index.html
+++ b/index.html
@@ -44,16 +44,11 @@
       <img src="assets/img/AAG09457.jpg" id="profile" alt="Alan" />
     </div>
     <h3 style="margin:10px;">Hello, I'm Alan</h3>
-    <p>I'm a Full Stack Web Developer with background in graphic design and leveraging a degree in
-      Architecture from The University of Georgia to create solutions that are both user friendly and elegant. Eager to
-      use
-      my skills in CSS, Javascript, and responsive web design earned through a certificate in Full Stack Development
-      from the
-      Georgia Institute of Technology. Known for being organized, collaborative, and a problem solver. Self taught in
-      ladder logic and msSQL at
-      the Georgia Aquarium and maintained and reprogramed equipment controls and PLC's. Eager to use my skills and
-      unique perspective to
-      create web elements that are functional and visually pleasing.</p>
+    <p>I'm a Full Stack Web Developer with a background in design and leveraging a bachelors degree from The University of 
+      Georgia. My coding journey began at the Georgia Aquarium where I learned ladder logic and SQL and maintained the automation 
+      database and reprogrammed equipment controls and PLC's. I formalized my education in coding earning a certificate in Full 
+      Stack Development from the Georgia Institute of Technology. I am eager to use my skills and unique perspective to create web 
+      elements that are functional and elegant.</p>
   </div>
 
   <div class="bgimg-2">
@@ -68,12 +63,12 @@
       <div class="row">
         <!-- Card 1 -->
         <div class="card mb-3 col-md-4 shadow">
-          <a href="https://aagrosse.github.io/weatherDashboard/" target="_blank">
-            <img src="assets/img/weatherDashboard.png" class="card-img portIm" alt="..." />
+          <a href="https://bandwagon-project.herokuapp.com/" target="_blank">
+            <img src="assets/img/bandwagon-listener.png" class="card-img portIm" alt="..." />
           </a>
           <div class="card-body">
-            <h5 class="card-title" style="text-align:center">Weather
-              Dashboard</a><a href="https://github.com/aagrosse/weatherDashboard" target="_blank"><i
+            <h5 class="card-title" style="text-align:center">Bandwagon
+              </a><a href="https://github.com/alexgignilliat/bandwagon" target="_blank"><i
                   class="fab fa-github p-2 text-success"></i></a></h5>
           </div>
         </div>
@@ -132,6 +127,19 @@
 
         <!-- Card 6 -->
         <div class="card mb-3 col-md-4 shadow">
+          <a href="https://aagrosse.github.io/weatherDashboard/" target="_blank">
+            <img src="assets/img/weatherDashboard.png" class="card-img portIm" alt="..." />
+          </a>
+          <div class="card-body">
+            <h5 class="card-title" style="text-align:center">Weather
+              Dashboard</a><a href="https://github.com/aagrosse/weatherDashboard" target="_blank"><i
+                  class="fab fa-github p-2 text-success"></i></a></h5>
+          </div>
+        </div>
+        <!-- Card 6 -->
+
+        <!-- Card 7 -->
+        <!-- <div class="card mb-3 col-md-4 shadow">
           <a href="https://www.flickr.com/photos/atventure/albums/72157712916793443" target="_blank">
             <img src="assets/img/photography.PNG" class="card-img portIm" alt="..." />
           </a>
@@ -139,13 +147,14 @@
             <h5 class="card-title" style="text-align:center">Photography</a>
               </a></h5>
           </div>
-        </div>
-        <!-- Card 6 -->
-
+        </div> -->
         <!-- Card 7 -->
 
-        <!-- Card 7 -->
+        <!-- Card 8 -->
+        <!-- Card 8 -->
 
+        <!-- Card 9 -->
+        <!-- Card 9 -->
       </div>
 
     </div>
