--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
               <ul>
                 <li>GitHub</li>
                 <li>Agile</li>
+                <li>MVC</li>
                 <li>Node.js</li>
               </ul>
             </div>
