added image flip

--- a/index.html
+++ b/index.html
@@ -39,18 +39,52 @@
           </svg></span></a>
     </div>
   </div>
-
   <div class="bio">
-    <div>
-      <img src="assets/img/AAG09457.jpg" id="profile" alt="Alan" />
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-2 bioImg">
+
+
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="assets/img/AAG09457.jpg" id="profile" alt="Alan" />
+              </div>
+              <div class="flip-card-back">
+                <img src="assets/img/img2.jpg" id="profile" alt="Alan2" />
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+        <div class="col-xl-10 bioImg2">
+          <h3 style="margin:10px;">Hello, I'm Alan</h3>
+          <p>I am a Full Stack Web Developer with a background in design and leveraging a bachelor’s degree from The
+            University
+            of Georgia. My coding journey began at the Georgia Aquarium where I learned ladder logic and SQL and
+            maintained the
+            automation database and reprogrammed equipment controls and PLC's. I formalized my education in coding
+            earning a
+            certificate in Full Stack Development from the Georgia Institute of Technology. Along with my work at the
+            Aquarium,
+            I am currently also working a contract job with the Atlanta Regional Commission working on applications to
+            help community
+            leaders make better data driven decisions.</p>
+        </div>
+      </div>
     </div>
-    <h3 style="margin:10px;">Hello, I'm Alan</h3>
-    <p>I'm a Full Stack Web Developer with a background in design and leveraging a bachelors degree from The University of 
-      Georgia. My coding journey began at the Georgia Aquarium where I learned ladder logic and SQL and maintained the automation 
-      database and reprogrammed equipment controls and PLC's. I formalized my education in coding earning a certificate in Full 
-      Stack Development from the Georgia Institute of Technology. I am eager to use my skills and unique perspective to create web 
-      elements that are functional and elegant.</p>
   </div>
+  
 
   <div class="bgimg-2">
     <div class="caption">
@@ -311,22 +345,22 @@
 
 
 
-  
+
 
   function fizzbuzz(input) {
     for (let i = 0; i < input; i++) {
-        if (i % 3 === 0 && i % 5 === 0) {
-            console.log("Fizzbuzz");
-        } else if (i % 3 === 0) {
-            console.log("Fizz");
-        } else if (i % 5 === 0) {
-            console.log("Buzz");
-        } else {
-            console.log(i);
-        }
+      if (i % 3 === 0 && i % 5 === 0) {
+        console.log("Fizzbuzz");
+      } else if (i % 3 === 0) {
+        console.log("Fizz");
+      } else if (i % 5 === 0) {
+        console.log("Buzz");
+      } else {
+        console.log(i);
+      }
     }
-}
-fizzbuzz(100);
-console.log("Thanks for checking out my portfolio.  Feel free to send me an email at aagrosse@gmail.com")
+  }
+  fizzbuzz(100);
+  console.log("Thanks for checking out my portfolio.  Feel free to send me an email at aagrosse@gmail.com")
 
 </script>
