updated readme link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
         <div class="col-xl-10 bioImg2">
-          <h3 style="margin:10px;">Hello, I'm Alan</h3>
+          <h3 id="yolo" style="margin:10px;">Hello, I'm Alan</h3>
           <p>I am a Full Stack Web Developer with a background in design and leveraging a bachelor’s degree from The
             University
             of Georgia. My coding journey began at the Georgia Aquarium where I learned ladder logic and SQL and
