--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="col-md-12 d-flex justify-content-center">
         <h1 class="pb-3 mr-5">Skill Sets</h1>
 
-        <form method="get" action="AAG Resume.pdf" target="_new">
+        <form method="get" action="AG_FS.pdf" target="_new">
           <button class="btn btn-link btn-danger" type="submit"><i class="fas fa-file-pdf"></i> Download Resume
             PDF</button>
         </form>
