--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Full Stack Web Development Portfolio for Alan Grosse.  Experienced Developer in MERN, Javascript, CSS, HTML, and Express. Atlanta Based.">
   <link rel="icon" href="./assets/img/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/slate/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
@@ -11,7 +12,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/component.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
+  <title>Full Stack Web Development Portfolio for Alan Grosse.</title>
 </head>
 
 <body>
